apps/generic/overlays/tow/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tow
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1993
        runAsGroup: 1993
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: container
          image: ghcr.io/gandazgul/chores-app:sha-d956e2fb0a7f39b38d4c4f4e91c90e26ec07b491@sha256:bc6ed1decd57d042e140ca2422a7dbc8afc0237739fd42b1ff35c2f9a97f0e95
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 2
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/tow
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: main-volume
          $patch: delete
        - name: tmp
          emptyDir: {}
