apps/generic/overlays/tow/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tow
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
